Transforming parent's origin (Pivot Point -> Affects Only -> Origins) with 'Parents (Skip Children)' option caused jitter on child and moves child geo on cancel #69299

Closed
opened 2019-08-29 16:05:52 +02:00 by Philipp Oeser · 5 comments
Member

System Information
Operating system: Linux-5.2.8-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-29 13:11, hash: 7745c6e35c
Worked: (optional)

Short description of error
Transforming Parent's Origin (Pivot Point -> Affects Only -> Origins) with 'Parents (Skip Children)' caused jitter on child and moves child geo on cancel

Exact steps for others to reproduce the error
T69283_b.blend

  • open file
  • move cubes origin
  • see child jitter while moving
  • cancel move [child should hop out of place]
  • spotted while looking into #69283
**System Information** Operating system: Linux-5.2.8-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-29 13:11, hash: `7745c6e35c` Worked: (optional) **Short description of error** Transforming Parent's Origin (Pivot Point -> Affects Only -> Origins) with 'Parents (Skip Children)' caused jitter on child and moves child geo on cancel **Exact steps for others to reproduce the error** [T69283_b.blend](https://archive.blender.org/developer/F7709576/T69283_b.blend) - open file - move cubes origin - see child jitter while moving - cancel move [child should hop out of place] - spotted while looking into #69283
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Member
CC @ideasman42

This issue was referenced by a785835b2c

This issue was referenced by a785835b2c90520094e9600c6e22bff26c969364

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-08-30 19:43:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69299
No description provided.