Fix T69299: Transform origin & skip-children jitters